@@ -14,6 +14,7 @@ Version 1.0.xxxx (January xxth 2014)
 - Implemented: OpenZWave, option to delete failed nodes
 - Changed: All external hardware sensors without RF now reports rssi level 12
 - Implemented: Option to display temperature in Fahrenheit
+- Fixed: Razberry, problem with door sensors
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
